k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infrara-prod
  labels:
    name: infrara-prod
    environment: production
